getFirst getLast 변경